[workspace]
members = [
    "player",
    "weapon"
]

# Is not implicitly added for workspace projects
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bevy = { version = "0.10.0" }
bevy_rapier3d = { version = "0.21.0", features = [ "simd-stable", "debug-render" ] }
leafwing-input-manager = "0.9"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
