[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_rapier3d = { version = "0.20.0", features = [ "simd-stable", "debug-render" ] }
leafwing-input-manager = "0.8.0"
